# python-odinmarketfeedclient

./: CHANGELOG.md  LICENSE  README.md  pyproject.toml
examples/: basic_example.py
odin_market_feed/: MarketFeedClient.py  __init__.py
